# corruption-inequality-timeseries

./: .gitignore  DELIVERABLES.md  README.md  pyproject.toml
data/interim/: barro_lee_annual.parquet  country_meta.parquet  swiid_summary.parquet  vdem.parquet  wdi.parquet  wgi.parquet  wid_top10.parquet
data/processed/: panel.parquet  swiid_draws.parquet
notebooks/: 01_data_assembly.ipynb  02_pretests.ipynb  03_main_estimation.ipynb  04_causality.ipynb  05_beyond_granger.ipynb  06_robustness.ipynb  Untitled-1.ipynb
outputs/figures/: course_choropleth.html  course_irf_animation.html
outputs/tables/: case_brazil_summary.csv  case_brazil_weights_corruption.csv  case_brazil_weights_inequality.csv  course_adf_kpss.csv  course_granger_country.csv  course_granger_summary.csv  course_irf_Emergents.csv  course_irf_OECD.csv  course_summary_by_group.csv  data_appendix.csv  data_appendix.tex  dh_results.csv  lp_corruption_to_inequality.csv  lp_inequality_to_corruption.csv  main_estimation.csv  main_stability.csv  phase2_decision.csv  pretests_baiperron.csv  pretests_cd_R.csv  pretests_cd_py.csv  pretests_cips.csv  pretests_eg_residual_adf.csv  pretests_pedroni.csv  pretests_pedroni_R.csv  pretests_pedroni_i.rds  pretests_pedroni_ic.rds  pretests_unitroot.csv  pretests_westerlund.csv  pretests_zivotandrews.csv  robust_swiid_imputations.csv  robustness_matrix.csv  ty_results.csv  ty_summary.csv
src/course/: descriptives.py  granger_country.py  group_compare.py  groups.py  series_properties.py  style.py  var_irf.py
updates/: README.md  headline_findings.md
(+23 files in other folders)
