[project]
name = "corruption-inequality-ts"
version = "0.1.0"
description = "Time-series causality between corruption and income inequality"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyarrow>=16",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "linearmodels>=6.0",
    "arch>=7.0",
    "wbgapi>=1.0.12",
    "pycountry>=24.6",
    "pyreadr>=0.5",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "tqdm>=4.66",
    "tabulate>=0.9",
    "openpyxl>=3.1",
    "plotly>=5.20",
    "kaleido==0.2.1",
]

[tool.uv]
package = false
